# telegram-post-aggregator

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.json  docker-compose.yml
src/: main.rs
