[package]
name = "telegram_post_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
futures-util = "0.3.31"
grammers-client = "0.7.0"
grammers-tl-types = "0.7.0"
log = "0.4.26"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
simple_logger = { version = "5.0.0" }
tokio = { version = "1.44.1", features = ["full"] }
